Earn Crypto Section Mobile UI and other small fixes like disable text selection and adjusted card spaces under Icons section

--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,9 @@ code {
 .scroll::-webkit-scrollbar-thumb {
   visibility: visible;
 }
+@media (max-width:991px) {
+  .video-layout{
+    border-radius: 68.6px !important;
+  }
+}
+
